# ube-craze-tiktok-nlp

./: .gitattributes  .gitignore  AGENTS.md  HANDOFF.md  README.md  links.txt  pyproject.toml
.cursor/project/: analysis_registry.md  data_registry.md
.cursor/rules/: project-overview.mdc  tech-stack.mdc
docs/: proposal.md
notebooks/: 01_scraping.ipynb  02_preprocessing.ipynb  03_sentiment_analysis.ipynb  04_visualization.ipynb
outputs/docs/: cluster_insights.md  cluster_samples.md
references/: proposal.md
scripts/: run_pipeline.py
src/ube_craze_nlp/: __init__.py
src/ube_craze_nlp/nlp/: __init__.py  clean.py  sentiment.py
src/ube_craze_nlp/scraper/: __init__.py  engine.py  parser.py
src/ube_craze_nlp/utils/: __init__.py  paths.py
tests/: test_nlp.py  test_scraper.py
